css/notifcenter.css
.clearfix {
	*zoom: 1;
}

.clearfix:before, .clearfix:after {
	display: table;
	content: "";
	line-height: 0;
}

.clearfix:after {
	clear: both;
}

.hide-text {
	font: 0/0 a;
	color: transparent;
	text-shadow: none;
	background-color: transparent;
	border: 0;
}

.input-block-level {
	display: block;
	width: 100%;
	min-height: 30px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

a, a:hover {
	text-decoration: none;
}

body {
	overflow-x: hidden;
	overflow-y: auto;
}

#notificationcentermain {
	width: 100%;
	height: 100%;
	position: relative;
	top: 0;
	overflow-x: hidden;
	overflow-y: auto;
}

#notificationcenterpanel {
	width: 300px;
	height: 100%;
	overflow-y: auto;
	min-height: 600px;
	position: absolute;
	top: 0;
	right: -300px;
	-webkit-box-shadow: inset 2px 0 3px 1px rgba(0, 0, 0, 0.5);
	box-shadow: inset 2px 0 3px 1px rgba(0, 0, 0, 0.5);
	color: #fff;
	background-color: #333;
}

.notificationul {
	list-style: none;
	margin: 0;
	padding: 0;
	position: absolute;
	top: 0;
	right: 0;
	z-index: 1003;
}

.notificationul li {
	margin: 20px;
	position: absolute;
	right: -450px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-webkit-box-shadow: 0 2px 1px 0 #f2f2f2;
	box-shadow: 0 2px 1px 0 #f2f2f2;
	transition-property: right, position;
	transition-duration: 500ms;
	transition-timing-function: linear;
}

.notification li .active {
	right: 0px;
}

.notification {
	position: relative;
	min-height: 100px;
	width: 400px;
	background-color: #e7e8ec;
	color: #a5a6a9;
	border: 1px solid #CCC;
	border-radius: 8px;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	box-shadow: 3px 3px 6px #333;
	-moz-box-shadow: 3px 3px 6px #333;
	-webkit-box-shadow: 3px 3px 6px #333;
}

.notification a, .notification a:hover {
	text-decoration: none;
	color: #4aaafc;
}

.notifcenterbox {
	position: relative;
	padding-right: 10px;
}

.notifcenterbox small {
	color: #999;
}

.centerlist ul li:hover .closenotif,
.notifcenterbox:hover .closenotif,
.notification:hover .closenotif {
	display: block;
}

.notification .closenotif,
.notifcenterbox .closenotif,
.centerheader .closenotif {
	position: absolute;
	width: 12px;
	height: 12px;
	top: 5px;
	right: 5px;
	cursor: pointer;
	display: none;
	background-color: #b7b8bc;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
	border-radius: 100px;
	text-align: center;
	font-size: 12px;
	line-height: 1px;
	color: #e7e8ec;
	padding: 1px;
}

.notifcenterbox .closenotif {
	top: 0;
	right: -9px;
	background-color: #111;
	color: #555;
}

.centerheader .closenotif {
	display: block;
	top: 6px;
	right: 6px;
	background-color: #111;
	color: #555;
}

.notification .iconnotif {
	width: 99px;
	float: left;
	height: 100px;
	border-right: 1px solid #e0e0e0
}

.notification .iconnotifimg {
	width: 64px;
	height: 64px;
	margin: 18px;
}

.notification .iconnotifimg i {
	font-size: 64px;
	width: 64px;
	text-align: center;
	color: #000;
}

.notification .iconnotifimg img {
	max-width: 100%;
	max-height: 100%;
}

.notification .contentnotif {
	width: 270px;
	float: left;
	height: 80px;
	padding: 10px;
	padding-right: 20px;
	background-color: #fff;
	-webkit-border-top-right-radius: 8px;
	-webkit-border-bottom-right-radius: 8px;
	-moz-border-radius-topright: 8px;
	-moz-border-radius-bottomright: 8px;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
}

.centerlist ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.centerlist ul li {
	padding: 15px;
	border-bottom: 1px solid #555;
}

.centerheader {
	position: relative;
	height: 24px;
	padding: 0 35px;
	background-size: 24px;
	background-position: center left;
	background-repeat: no-repeat;
	border-bottom: 1px solid #555;
	line-height: 22px;
	text-transform: uppercase;
	font-weight: bold;
	margin-left: 3px;
	padding-top: 4px;
}

.centerheader > i,
.centerheader > img {
	padding-right: 10px;
	width: 25px;
	height: 25px;
	position: absolute;
	top: 2px;
	left: 2px;
	font-size: 25px;
}

.notificationcentericon {
	position: relative;
	top: 0;
	left: 0;
}

.notificationcentericon[data-counter]:after {
	content: attr(data-counter);
	position: absolute;
	top: -1em;
	right: -1em;
	padding: 3px 9px;
	border: 2px solid white;
	border-radius: 100px;
	background: linear-gradient(top, #ff0000 0, #a11e1e 100%);
	background: -webkit-linear-gradient(top, #ff0000 0, #a11e1e 100%);
	background: -moz-linear-gradient(top, #ff0000 0, #a11e1e 100%);
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.4), 0 0 1px rgba(0, 0, 0, 0.7) inset, 0 10px 0 rgba(255, 255, 255, 0.11) inset;
	background-clip: padding-box;
	font: bold 12px/18px"Helvetica Neue", sans-serif;
	color: white;
	text-decoration: none;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.6);
}

